# chip-8_emu

./: CMakeLists.txt
src/: chip8.c  chip8.h  main.c  main.h
